--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
 test:
   post:
-    - go get github.com/goura/spotmc/spotmc; cp /home/ubuntu/.go_project/bin/spotmc ${CIRCLE_ARTIFACTS}
+    - go get github.com/goura/spotmc/spotmc
+    - cp /home/ubuntu/.go_project/bin/spotmc ${CIRCLE_ARTIFACTS}
+    - go get github.com/aktau/github-release
+    - github-release release --user goura --repo spotmc --tag ${CIRCLE_BRANCH}-latest --name ${CIRCLE_BRANCH} --description "auto generated release" --pre-release
+    - github-release upload --user goura --repo spotmc --tag ${CIRCLE_BRANCH}-latest --name "spotmc" --file /home/ubuntu/.go_project/bin/spotmc
